--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,20 +1,11 @@
-image: Ubuntu1804  # образ для сборки
-
-stack: node 10  # окружение
-
+image: Microsoft Windows 10 Pro
+stack: node 16.16.0
 branches:
-  only:
-    - master  # ветка git
-
-cache: node_modules  # кеширование
-
+    only:
+        - master
+cache: node_modules
 install:
-  - npm install  # команда установки зависимостей
-
-build: off  # отключаем встроенную в appveyor систему сборки
-
-build_script:
-  - npm run build   # команда сборки
-
+    - npm install
+build: off
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+    - npm run lint && npm test
