--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,11 @@
-image: Microsoft Windows 10 Pro
-stack: node 16.16.0
+image: Ubuntu1804 # образ для сборки
+stack: node 12 # окружение
 branches:
     only:
-        - master
-cache: node_modules
+        - master # ветка git
+cache: node_modules # кеширование
 install:
-    - npm install
+    - npm install # команда установки зависимостей
 build: off
 test_script:
     - npm run lint && npm test
